--- a/Index.html
+++ b/Index.html
@@ -11,17 +11,13 @@
     <link rel="stylesheet" href="bower_components/material-design-lite/material.min.css">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="stylesheet" type="text/css" href="potree/css/potree.css">
-
+    <!--    <link rel="stylesheet" href="style.css"> -->
 
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body ng-cloak layout="column">
-
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-messages/angular-messages.js"></script>
@@ -30,15 +26,10 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/material-design-lite/material.min.js"></script>
-
-
-    <script src="potree/js/libs/three.js"></script>
-    <script src="potree/js/libs/stats.min.js"></script>
-    <!--    <script src="potree/js/libs/dat.gui.min.js"></script> -->
+    <script src="bower_components/three.js/build/three.min.js"></script>
     <script src="bower_components/dat.gui/build/dat.gui.js"></script>
-
+    <script src="potree/js/libs/stats.min.js"></script>
     <script src="potree/js/libs/BinaryHeap.js"></script>
-
     <script src="potree/js/libs/potree.js"></script>
     <script src="potree/js/ProgressBar.js"></script>
 
@@ -49,6 +40,7 @@
 
     <div class="container">
         <div layout="column" layout-fill>
+
             <md-toolbar layout="row" class="md-toolbar-tools">
                 <div class="md-toolbar-tools">
                     <span>App's Title</span>
@@ -97,16 +89,13 @@
 
                 </div>
             </md-toolbar>
+
             <md-content>
             </md-content>
         </div>
         <div ng-view="" class="view"></div>
     </div>
-
-
-
     <script type="module" src="app/bootstrap.js"></script>
-
 </body>
 
 </html>
